// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SwitchBarList > shows a blinds switch 1`] = `
<div
  class="MuiCardContent-root css-w8j36o-MuiCardContent-root-buttonGroup"
  data-testid="switchbar-Blinds"
>
  <button
    class="css-l44rl-root"
  >
    <span
      aria-hidden="true"
      class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium material-icons css-1n5qiej-MuiIcon-root"
    >
      arrow_drop_down
    </span>
  </button>
  <span
    class="css-ccz72j-label"
  >
    <i />
    <p
      class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
    >
      Blinds
    </p>
  </span>
  <button
    class="css-l44rl-root"
  >
    <span
      aria-hidden="true"
      class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium material-icons css-1n5qiej-MuiIcon-root"
    >
      arrow_drop_up
    </span>
  </button>
</div>
`;

exports[`SwitchBarList > shows a normal light switch 1`] = `
<div
  class="MuiCardContent-root css-w8j36o-MuiCardContent-root-buttonGroup"
  data-testid="switchbar-My Normal Light Switch"
>
  <button
    class="css-nm7ep5-active"
  >
    <span
      aria-hidden="true"
      class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium material-icons css-1n5qiej-MuiIcon-root"
    >
      radio_button_checked
    </span>
  </button>
  <span
    class="css-ccz72j-label"
  >
    <i />
    <p
      class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
    >
      My Normal Light Switch
    </p>
  </span>
  <button
    class="css-l44rl-root"
  >
    <span
      aria-hidden="true"
      class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium material-icons css-1n5qiej-MuiIcon-root"
    >
      radio_button_unchecked
    </span>
  </button>
</div>
`;

exports[`SwitchBarList > shows a selector switch 1`] = `
<div
  class="MuiCardContent-root css-w8j36o-MuiCardContent-root-buttonGroup"
  data-testid="switchbar-My Selector Switch: armed"
>
  <button
    class="css-l44rl-root"
  >
    <div
      class="dummy"
    />
  </button>
  <span
    class="css-ccz72j-label"
  >
    <i />
    <p
      class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
    >
      My Selector Switch: armed
    </p>
  </span>
  <button
    class="css-l44rl-root"
  >
    <div
      class="dummy"
    />
  </button>
</div>
`;
